--- a/templates/jobs/browse.html.twig
+++ b/templates/jobs/browse.html.twig
@@ -8,18 +8,20 @@
     <div class="row mb-4">
         <div class="col-12">
             <div class="dashboard-header">
-                <div class="row align-items-center">
-                    <div class="col-md-8">
-                        <h1 class="mb-2">
-                            <i class="bi bi-briefcase me-2"></i>Browse Jobs
-                        </h1>
-                        <p class="mb-0 opacity-75">Explore career opportunities and find your perfect role</p>
-                    </div>
-                    <div class="col-md-4 text-md-end">
-                        <div class="d-flex justify-content-md-end">
-                            <span class="badge bg-primary fs-6">
-                                <i class="bi bi-collection me-1"></i>{{ jobs.nbResults }} Jobs Available
-                            </span>
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-md-8">
+                            <h1 class="mb-2">
+                                <i class="bi bi-briefcase me-2"></i>Browse Jobs
+                            </h1>
+                            <p class="mb-0 opacity-75">Explore career opportunities and find your perfect role</p>
+                        </div>
+                        <div class="col-md-4 text-md-end">
+                            <div class="d-flex justify-content-md-end">
+                                <span class="badge bg-primary fs-6">
+                                    <i class="bi bi-collection me-1"></i>{{ jobs.nbResults }} Jobs Available
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
